4. Policies/manifests/4.4-default-egress-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: platform.default-egress
  namespace: default
spec:
  tier: platform
  order: 75
  selector: ""
  serviceAccountSelector: ""
  egress:
    - action: Allow
      source: {}
      destination: {}
  types:
    - Egress
